# pushsampler

./: .gitignore  README.md  pyproject.toml
examples/: gau_gau_1d.py  gau_uni_1d.py  uni_uni_1d.py
notebooks/: gau_landscape.ipynb  uni_landscape.ipynb  uni_landscape_cf.ipynb  uni_landscape_mgf.ipynb
src/pushsampler/: utils.py
src/pushsampler/architecture/: __init__.py  linear.py  mlp.py
