[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pushsampler"
version = "0.0.1"
authors = [
  { name="Vivien Cabannes", email="vivien.cabannes@gmail.com" },
]
description = "Research library to try out deep learning ideas easily."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
]

[project.urls]
"Homepage" = "https://github.com:VivienCabannes/pushsampler"
"Bug Tracker" = "https://github.com/VivienCabannes/pushsampler/issues"
